--- a/UI/styles.css
+++ b/UI/styles.css
@@ -396,6 +396,8 @@ body {
 
     margin-bottom: .5rem;
 
+    cursor: pointer;
+
     transition: .3s ease-in-out;
     border-bottom: 1px solid var(--grey-2);
 }
@@ -580,12 +582,16 @@ body {
 
 
 
-@media screen and (max-width: 910px) {
+@media screen and (max-width: 65rem) {
     .container {
         grid-template-columns: 100vw;
     }
 
     .space {
+        display: none;
+    }
+
+    .curent-user {
         display: none;
     }
 }
