--- a/src/UI/styles.css
+++ b/src/UI/styles.css
@@ -410,8 +410,8 @@ body {
 .user-icon {
     display: flex;
 
-    width: 3rem;
-    height: 3rem;
+    min-width: 3rem;
+    min-height: 3rem;
 
     justify-content: center;
     align-items: center;
